# vircadia

cmake/macros/: AutoScribeShader.cmake
interface/src/raypick/: ParabolaPointer.h
interface/src/workload/: GameWorkloadRenderer.cpp
libraries/entities-renderer/src/: RenderableParticleEffectEntityItem.cpp  RenderableParticleEffectEntityItem.h  RenderablePolyVoxEntityItem.cpp  paintStroke.slf  paintStroke.slv  polyvox.slf  polyvox.slv  polyvox_fade.slf  polyvox_fade.slv
libraries/model-serializers/src/: GLTFSerializer.cpp
libraries/render-utils/src/: AnimDebugDraw.cpp  AntialiasingEffect.cpp  BloomEffect.cpp  CauterizedMeshPartPayload.cpp  DeferredBufferWrite.slh  DeferredLightingEffect.cpp  GeometryCache.cpp  GeometryCache.h  Haze.slf  Haze.slh  HighlightEffect.cpp  LightStage.cpp  MeshPartPayload.cpp  SubsurfaceScattering.cpp  SurfaceGeometryPass.cpp  ToneMappingEffect.cpp  deformed_model.slv  deformed_model_dq.slv  deformed_model_normal_map.slv  deformed_model_normal_map_dq.slv  deformed_model_shadow.slv  deformed_model_shadow_dq.slv  directional_ambient_light.slf  directional_ambient_light_shadow.slf  directional_skybox_light.slf  directional_skybox_light_shadow.slf  forward_model.slf  forward_model_normal_map.slf  forward_model_translucent.slf  forward_model_unlit.slf  forward_simple.slf  forward_simple_textured.slf  forward_simple_textured_transparent.slf  forward_simple_textured_unlit.slf  glowLine.slf  grid.slf  (+46 more)
tools/: shadergen.py
tools/gpu-frame-player/: CMakeLists.txt
tools/gpu-frame-player/src/: PlayerWindow.cpp  RenderThread.cpp  RenderThread.h
(+41 files in other folders)
